geolog-lang/test/mathieu.output
-- tokens
Decl theory (0:6)
AIdent MathieuTemplate (7:22)
SKeyword := (23:25)
Block sig (26:29)
Nl (29:30)
AIdent Point (32:37)
SKeyword : (38:39)
AKeyword Query (40:45)
Nl (45:46)
AIdent Quad (48:52)
SKeyword : (53:54)
AKeyword Query (55:60)
Nl (63:102)
AIdent q0 (130:132)
SKeyword : (133:134)
AIdent Quad (135:139)
SKeyword -> (140:142)
AIdent Point (143:148)
Nl (148:149)
AIdent q1 (151:153)
SKeyword : (154:155)
AIdent Quad (156:160)
SKeyword -> (161:163)
AIdent Point (164:169)
Nl (169:170)
AIdent q2 (172:174)
SKeyword : (175:176)
AIdent Quad (177:181)
SKeyword -> (182:184)
AIdent Point (185:190)
Nl (190:191)
AIdent q3 (193:195)
SKeyword : (196:197)
AIdent Quad (198:202)
SKeyword -> (203:205)
AIdent Point (206:211)
Nl (211:212)
Nl (212:213)
AIdent act (232:235)
SKeyword : (236:237)
AIdent Quad (238:242)
SKeyword -> (243:245)
AIdent Point (246:251)
SKeyword -> (252:254)
AIdent Point (255:260)
Nl (260:261)
Nl (261:262)
AIdent mul (289:292)
SKeyword : (293:294)
AIdent Quad (295:299)
SKeyword -> (300:302)
AIdent Quad (303:307)
SKeyword -> (308:310)
AIdent Quad (311:315)
Nl (315:316)
Nl (316:317)
Nl (319:490)
AIdent base0 (490:495)
SKeyword : (496:497)
AIdent Point (498:503)
Nl (503:504)
AIdent base1 (504:509)
SKeyword : (510:511)
AIdent Point (512:517)
Nl (517:518)
AIdent base2 (518:523)
SKeyword : (524:525)
AIdent Point (526:531)
Nl (531:532)
AIdent base3 (532:537)
SKeyword : (538:539)
AIdent Point (540:545)
Nl (545:546)
Nl (546:547)
Nl (549:567)
AIdent make_quad (569:578)
SKeyword : (578:579)
AIdent Point (580:585)
SKeyword -> (586:588)
AIdent Point (589:594)
SKeyword -> (595:597)
AIdent Point (598:603)
SKeyword -> (604:606)
AIdent Point (607:612)
SKeyword -> (613:615)
AIdent Quad (616:620)
Nl (620:621)
Nl (621:622)
AIdent ax/quad_gen (624:635)
SKeyword : (636:637)
LParen (638:639)
AIdent a (639:640)
SKeyword : (641:642)
AIdent Point (643:648)
RParen (648:649)
SKeyword -> (650:652)
LParen (653:654)
AIdent b (654:655)
SKeyword : (656:657)
AIdent Point (658:663)
RParen (663:664)
SKeyword -> (665:667)
LParen (668:669)
AIdent c (669:670)
SKeyword : (671:672)
AIdent Point (673:678)
RParen (678:679)
SKeyword -> (680:682)
LParen (683:684)
AIdent d (684:685)
SKeyword : (686:687)
AIdent Point (688:693)
RParen (693:694)
SKeyword -> (695:697)
LParen (698:699)
Nl (699:700)
LParen (704:705)
AIdent a (705:706)
SKeyword = (707:708)
AIdent b (709:710)
RParen (710:711)
SIdent / (712:714)
LParen (715:716)
AIdent b (716:717)
SKeyword = (718:719)
AIdent c (720:721)
RParen (721:722)
SIdent / (723:725)
LParen (726:727)
AIdent a (727:728)
SKeyword = (729:730)
AIdent c (731:732)
RParen (732:733)
SIdent / (734:736)
LParen (737:738)
AIdent a (738:739)
SKeyword = (740:741)
AIdent d (742:743)
RParen (743:744)
SIdent / (745:747)
LParen (748:749)
AIdent b (749:750)
SKeyword = (751:752)
AIdent d (753:754)
RParen (754:755)
SIdent / (756:758)
LParen (759:760)
AIdent c (760:761)
SKeyword = (762:763)
AIdent d (764:765)
RParen (765:766)
SIdent / (767:769)
LParen (770:771)
Nl (771:772)
LParen (778:779)
AIdent q0 (779:781)
LParen (782:783)
AIdent make_quad (783:792)
AIdent a (793:794)
AIdent b (795:796)
AIdent c (797:798)
AIdent d (799:800)
RParen (800:801)
SKeyword = (802:803)
AIdent a (804:805)
RParen (805:806)
SIdent / (807:808)
Nl (810:811)
LParen (819:820)
AIdent q1 (820:822)
LParen (823:824)
AIdent make_quad (824:833)
AIdent a (834:835)
AIdent b (836:837)
AIdent c (838:839)
AIdent d (840:841)
RParen (841:842)
SKeyword = (843:844)
AIdent b (845:846)
RParen (846:847)
SIdent / (848:849)
Nl (851:852)
LParen (860:861)
AIdent q2 (861:863)
LParen (864:865)
AIdent make_quad (865:874)
AIdent a (875:876)
AIdent b (877:878)
AIdent c (879:880)
AIdent d (881:882)
RParen (882:883)
SKeyword = (884:885)
AIdent c (886:887)
RParen (887:888)
SIdent / (889:890)
Nl (890:892)
LParen (900:901)
AIdent q3 (901:903)
LParen (904:905)
AIdent make_quad (905:914)
AIdent a (915:916)
AIdent b (917:918)
AIdent c (919:920)
AIdent d (921:922)
RParen (922:923)
SKeyword = (924:925)
AIdent d (926:927)
RParen (927:928)
Nl (928:929)
RParen (933:934)
Nl (934:935)
RParen (937:938)
Nl (938:939)
Nl (939:940)
AIdent ax/quad_acts_base0 (998:1016)
SKeyword : (1017:1018)
LParen (1019:1020)
AIdent q (1020:1021)
SKeyword : (1022:1023)
AIdent Quad (1024:1028)
RParen (1028:1029)
SKeyword -> (1030:1032)
LParen (1033:1034)
AIdent b (1034:1035)
SKeyword : (1036:1037)
AIdent Point (1038:1043)
RParen (1043:1044)
SKeyword -> (1045:1047)
AIdent act (1048:1051)
AIdent q (1052:1053)
AIdent base0 (1054:1059)
SKeyword = (1060:1061)
AIdent q0 (1062:1064)
AIdent q (1065:1066)
Nl (1066:1067)
AIdent ax/quad_acts_base1 (1069:1087)
SKeyword : (1088:1089)
LParen (1090:1091)
AIdent q (1091:1092)
SKeyword : (1093:1094)
AIdent Quad (1095:1099)
RParen (1099:1100)
SKeyword -> (1101:1103)
LParen (1104:1105)
AIdent b (1105:1106)
SKeyword : (1107:1108)
AIdent Point (1109:1114)
RParen (1114:1115)
SKeyword -> (1116:1118)
AIdent act (1119:1122)
AIdent q (1123:1124)
AIdent base1 (1125:1130)
SKeyword = (1131:1132)
AIdent q1 (1133:1135)
AIdent q (1136:1137)
Nl (1137:1138)
AIdent ax/quad_acts_base2 (1140:1158)
SKeyword : (1159:1160)
LParen (1161:1162)
AIdent q (1162:1163)
SKeyword : (1164:1165)
AIdent Quad (1166:1170)
RParen (1170:1171)
SKeyword -> (1172:1174)
LParen (1175:1176)
AIdent b (1176:1177)
SKeyword : (1178:1179)
AIdent Point (1180:1185)
RParen (1185:1186)
SKeyword -> (1187:1189)
AIdent act (1190:1193)
AIdent q (1194:1195)
AIdent base2 (1196:1201)
SKeyword = (1202:1203)
AIdent q2 (1204:1206)
AIdent q (1207:1208)
Nl (1208:1209)
AIdent ax/quad_acts_base3 (1211:1229)
SKeyword : (1230:1231)
LParen (1232:1233)
AIdent q (1233:1234)
SKeyword : (1235:1236)
AIdent Quad (1237:1241)
RParen (1241:1242)
SKeyword -> (1243:1245)
LParen (1246:1247)
AIdent b (1247:1248)
SKeyword : (1249:1250)
AIdent Point (1251:1256)
RParen (1256:1257)
SKeyword -> (1258:1260)
AIdent act (1261:1264)
AIdent q (1265:1266)
AIdent base3 (1267:1272)
SKeyword = (1273:1274)
AIdent q3 (1275:1277)
AIdent q (1278:1279)
Nl (1279:1280)
Nl (1280:1281)
Nl (1283:1453)
AIdent ax/sharp (1455:1463)
SKeyword : (1464:1465)
LParen (1466:1467)
AIdent q (1467:1468)
SKeyword : (1469:1470)
AIdent Quad (1471:1475)
RParen (1475:1476)
SKeyword -> (1477:1479)
AIdent q (1480:1481)
SKeyword = (1482:1483)
AIdent make_quad (1484:1493)
LParen (1494:1495)
AIdent q0 (1495:1497)
AIdent q (1498:1499)
RParen (1499:1500)
LParen (1501:1502)
AIdent q1 (1502:1504)
AIdent q (1505:1506)
RParen (1506:1507)
LParen (1508:1509)
AIdent q2 (1509:1511)
AIdent q (1512:1513)
RParen (1513:1514)
LParen (1515:1516)
AIdent q3 (1516:1518)
AIdent q (1519:1520)
RParen (1520:1521)
Nl (1521:1522)
Nl (1522:1523)
AIdent ax/act_mul (1560:1570)
SKeyword : (1571:1572)
LParen (1573:1574)
AIdent q (1574:1575)
SKeyword : (1576:1577)
AIdent Quad (1578:1582)
RParen (1582:1583)
SKeyword -> (1584:1586)
LParen (1587:1588)
AIdent r (1588:1589)
SKeyword : (1590:1591)
AIdent Quad (1592:1596)
RParen (1596:1597)
SKeyword -> (1598:1600)
AIdent p (1601:1602)
SKeyword : (1603:1604)
AIdent Point (1605:1610)
SKeyword -> (1611:1613)
AIdent act (1614:1617)
LParen (1618:1619)
AIdent mul (1619:1622)
AIdent q (1623:1624)
AIdent r (1625:1626)
RParen (1626:1627)
AIdent p (1628:1629)
SKeyword = (1630:1631)
AIdent act (1632:1635)
AIdent q (1636:1637)
LParen (1638:1639)
AIdent act (1639:1642)
AIdent r (1643:1644)
AIdent p (1645:1646)
RParen (1646:1647)
Nl (1647:1648)
Nl (1648:1649)
AIdent ax/mul_assoc (1687:1699)
SKeyword : (1700:1701)
LParen (1702:1703)
AIdent q (1703:1704)
SKeyword : (1705:1706)
AIdent Quad (1707:1711)
RParen (1711:1712)
SKeyword -> (1713:1715)
LParen (1716:1717)
AIdent r (1717:1718)
SKeyword : (1719:1720)
AIdent Quad (1721:1725)
RParen (1725:1726)
SKeyword -> (1727:1729)
LParen (1730:1731)
AIdent s (1731:1732)
SKeyword : (1733:1734)
AIdent Quad (1735:1739)
RParen (1739:1740)
SKeyword -> (1741:1743)
AIdent mul (1744:1747)
LParen (1748:1749)
AIdent mul (1749:1752)
AIdent q (1753:1754)
AIdent r (1755:1756)
RParen (1756:1757)
AIdent s (1758:1759)
SKeyword = (1761:1762)
AIdent mul (1763:1766)
AIdent q (1767:1768)
LParen (1769:1770)
AIdent mul (1770:1773)
AIdent r (1774:1775)
AIdent s (1776:1777)
RParen (1777:1778)
Nl (1778:1779)
Nl (1779:1780)
End end (1780:1783)
Nl (1783:1784)
Nl (1784:1785)
Nl (1785:2156)
Eof (2156:2156)

-- notation
Decl theory (0:1783)
  Infix (7:1783)
    Ident MathieuTemplate (7:22)
    Keyword := (23:25)
    Block sig (26:1783)
      Infix (32:45)
        Ident Point (32:37)
        Keyword : (38:39)
        Keyword Query (40:45)
      Infix (48:60)
        Ident Quad (48:52)
        Keyword : (53:54)
        Keyword Query (55:60)
      Infix (130:148)
        Ident q0 (130:132)
        Keyword : (133:134)
        Infix (135:148)
          Ident Quad (135:139)
          Keyword -> (140:142)
          Ident Point (143:148)
      Infix (151:169)
        Ident q1 (151:153)
        Keyword : (154:155)
        Infix (156:169)
          Ident Quad (156:160)
          Keyword -> (161:163)
          Ident Point (164:169)
      Infix (172:190)
        Ident q2 (172:174)
        Keyword : (175:176)
        Infix (177:190)
          Ident Quad (177:181)
          Keyword -> (182:184)
          Ident Point (185:190)
      Infix (193:211)
        Ident q3 (193:195)
        Keyword : (196:197)
        Infix (198:211)
          Ident Quad (198:202)
          Keyword -> (203:205)
          Ident Point (206:211)
      Infix (232:260)
        Ident act (232:235)
        Keyword : (236:237)
        Infix (238:260)
          Ident Quad (238:242)
          Keyword -> (243:245)
          Infix (246:260)
            Ident Point (246:251)
            Keyword -> (252:254)
            Ident Point (255:260)
      Infix (289:315)
        Ident mul (289:292)
        Keyword : (293:294)
        Infix (295:315)
          Ident Quad (295:299)
          Keyword -> (300:302)
          Infix (303:315)
            Ident Quad (303:307)
            Keyword -> (308:310)
            Ident Quad (311:315)
      Infix (490:503)
        Ident base0 (490:495)
        Keyword : (496:497)
        Ident Point (498:503)
      Infix (504:517)
        Ident base1 (504:509)
        Keyword : (510:511)
        Ident Point (512:517)
      Infix (518:531)
        Ident base2 (518:523)
        Keyword : (524:525)
        Ident Point (526:531)
      Infix (532:545)
        Ident base3 (532:537)
        Keyword : (538:539)
        Ident Point (540:545)
      Infix (569:620)
        Ident make_quad (569:578)
        Keyword : (578:579)
        Infix (580:620)
          Ident Point (580:585)
          Keyword -> (586:588)
          Infix (589:620)
            Ident Point (589:594)
            Keyword -> (595:597)
            Infix (598:620)
              Ident Point (598:603)
              Keyword -> (604:606)
              Infix (607:620)
                Ident Point (607:612)
                Keyword -> (613:615)
                Ident Quad (616:620)
      Infix (624:927)
        Ident ax/quad_gen (624:635)
        Keyword : (636:637)
        Infix (639:927)
          Infix (639:648)
            Ident a (639:640)
            Keyword : (641:642)
            Ident Point (643:648)
          Keyword -> (650:652)
          Infix (654:927)
            Infix (654:663)
              Ident b (654:655)
              Keyword : (656:657)
              Ident Point (658:663)
            Keyword -> (665:667)
            Infix (669:927)
              Infix (669:678)
                Ident c (669:670)
                Keyword : (671:672)
                Ident Point (673:678)
              Keyword -> (680:682)
              Infix (684:927)
                Infix (684:693)
                  Ident d (684:685)
                  Keyword : (686:687)
                  Ident Point (688:693)
                Keyword -> (695:697)
                Infix (705:927)
                  Infix (705:765)
                    Infix (705:754)
                      Infix (705:743)
                        Infix (705:732)
                          Infix (705:721)
                            Infix (705:710)
                              Ident a (705:706)
                              Keyword = (707:708)
                              Ident b (709:710)
                            Ident / (712:714)
                            Infix (716:721)
                              Ident b (716:717)
                              Keyword = (718:719)
                              Ident c (720:721)
                          Ident / (723:725)
                          Infix (727:732)
                            Ident a (727:728)
                            Keyword = (729:730)
                            Ident c (731:732)
                        Ident / (734:736)
                        Infix (738:743)
                          Ident a (738:739)
                          Keyword = (740:741)
                          Ident d (742:743)
                      Ident / (745:747)
                      Infix (749:754)
                        Ident b (749:750)
                        Keyword = (751:752)
                        Ident d (753:754)
                    Ident / (756:758)
                    Infix (760:765)
                      Ident c (760:761)
                      Keyword = (762:763)
                      Ident d (764:765)
                  Ident / (767:769)
                  Infix (779:927)
                    Infix (779:887)
                      Infix (779:846)
                        Infix (779:805)
                          App (779:800)
                            Ident q0 (779:781)
                            App (783:800)
                              Ident make_quad (783:792)
                              Ident a (793:794)
                              Ident b (795:796)
                              Ident c (797:798)
                              Ident d (799:800)
                          Keyword = (802:803)
                          Ident a (804:805)
                        Ident / (807:808)
                        Infix (820:846)
                          App (820:841)
                            Ident q1 (820:822)
                            App (824:841)
                              Ident make_quad (824:833)
                              Ident a (834:835)
                              Ident b (836:837)
                              Ident c (838:839)
                              Ident d (840:841)
                          Keyword = (843:844)
                          Ident b (845:846)
                      Ident / (848:849)
                      Infix (861:887)
                        App (861:882)
                          Ident q2 (861:863)
                          App (865:882)
                            Ident make_quad (865:874)
                            Ident a (875:876)
                            Ident b (877:878)
                            Ident c (879:880)
                            Ident d (881:882)
                        Keyword = (884:885)
                        Ident c (886:887)
                    Ident / (889:890)
                    Infix (901:927)
                      App (901:922)
                        Ident q3 (901:903)
                        App (905:922)
                          Ident make_quad (905:914)
                          Ident a (915:916)
                          Ident b (917:918)
                          Ident c (919:920)
                          Ident d (921:922)
                      Keyword = (924:925)
                      Ident d (926:927)
      Infix (998:1066)
        Ident ax/quad_acts_base0 (998:1016)
        Keyword : (1017:1018)
        Infix (1020:1066)
          Infix (1020:1028)
            Ident q (1020:1021)
            Keyword : (1022:1023)
            Ident Quad (1024:1028)
          Keyword -> (1030:1032)
          Infix (1034:1066)
            Infix (1034:1043)
              Ident b (1034:1035)
              Keyword : (1036:1037)
              Ident Point (1038:1043)
            Keyword -> (1045:1047)
            Infix (1048:1066)
              App (1048:1059)
                Ident act (1048:1051)
                Ident q (1052:1053)
                Ident base0 (1054:1059)
              Keyword = (1060:1061)
              App (1062:1066)
                Ident q0 (1062:1064)
                Ident q (1065:1066)
      Infix (1069:1137)
        Ident ax/quad_acts_base1 (1069:1087)
        Keyword : (1088:1089)
        Infix (1091:1137)
          Infix (1091:1099)
            Ident q (1091:1092)
            Keyword : (1093:1094)
            Ident Quad (1095:1099)
          Keyword -> (1101:1103)
          Infix (1105:1137)
            Infix (1105:1114)
              Ident b (1105:1106)
              Keyword : (1107:1108)
              Ident Point (1109:1114)
            Keyword -> (1116:1118)
            Infix (1119:1137)
              App (1119:1130)
                Ident act (1119:1122)
                Ident q (1123:1124)
                Ident base1 (1125:1130)
              Keyword = (1131:1132)
              App (1133:1137)
                Ident q1 (1133:1135)
                Ident q (1136:1137)
      Infix (1140:1208)
        Ident ax/quad_acts_base2 (1140:1158)
        Keyword : (1159:1160)
        Infix (1162:1208)
          Infix (1162:1170)
            Ident q (1162:1163)
            Keyword : (1164:1165)
            Ident Quad (1166:1170)
          Keyword -> (1172:1174)
          Infix (1176:1208)
            Infix (1176:1185)
              Ident b (1176:1177)
              Keyword : (1178:1179)
              Ident Point (1180:1185)
            Keyword -> (1187:1189)
            Infix (1190:1208)
              App (1190:1201)
                Ident act (1190:1193)
                Ident q (1194:1195)
                Ident base2 (1196:1201)
              Keyword = (1202:1203)
              App (1204:1208)
                Ident q2 (1204:1206)
                Ident q (1207:1208)
      Infix (1211:1279)
        Ident ax/quad_acts_base3 (1211:1229)
        Keyword : (1230:1231)
        Infix (1233:1279)
          Infix (1233:1241)
            Ident q (1233:1234)
            Keyword : (1235:1236)
            Ident Quad (1237:1241)
          Keyword -> (1243:1245)
          Infix (1247:1279)
            Infix (1247:1256)
              Ident b (1247:1248)
              Keyword : (1249:1250)
              Ident Point (1251:1256)
            Keyword -> (1258:1260)
            Infix (1261:1279)
              App (1261:1272)
                Ident act (1261:1264)
                Ident q (1265:1266)
                Ident base3 (1267:1272)
              Keyword = (1273:1274)
              App (1275:1279)
                Ident q3 (1275:1277)
                Ident q (1278:1279)
      Infix (1455:1520)
        Ident ax/sharp (1455:1463)
        Keyword : (1464:1465)
        Infix (1467:1520)
          Infix (1467:1475)
            Ident q (1467:1468)
            Keyword : (1469:1470)
            Ident Quad (1471:1475)
          Keyword -> (1477:1479)
          Infix (1480:1520)
            Ident q (1480:1481)
            Keyword = (1482:1483)
            App (1484:1520)
              Ident make_quad (1484:1493)
              App (1495:1499)
                Ident q0 (1495:1497)
                Ident q (1498:1499)
              App (1502:1506)
                Ident q1 (1502:1504)
                Ident q (1505:1506)
              App (1509:1513)
                Ident q2 (1509:1511)
                Ident q (1512:1513)
              App (1516:1520)
                Ident q3 (1516:1518)
                Ident q (1519:1520)
      Infix (1560:1646)
        Infix (1560:1602)
          Ident ax/act_mul (1560:1570)
          Keyword : (1571:1572)
          Infix (1574:1602)
            Infix (1574:1582)
              Ident q (1574:1575)
              Keyword : (1576:1577)
              Ident Quad (1578:1582)
            Keyword -> (1584:1586)
            Infix (1588:1602)
              Infix (1588:1596)
                Ident r (1588:1589)
                Keyword : (1590:1591)
                Ident Quad (1592:1596)
              Keyword -> (1598:1600)
              Ident p (1601:1602)
        Keyword : (1603:1604)
        Infix (1605:1646)
          Ident Point (1605:1610)
          Keyword -> (1611:1613)
          Infix (1614:1646)
            App (1614:1629)
              Ident act (1614:1617)
              App (1619:1626)
                Ident mul (1619:1622)
                Ident q (1623:1624)
                Ident r (1625:1626)
              Ident p (1628:1629)
            Keyword = (1630:1631)
            App (1632:1646)
              Ident act (1632:1635)
              Ident q (1636:1637)
              App (1639:1646)
                Ident act (1639:1642)
                Ident r (1643:1644)
                Ident p (1645:1646)
      Infix (1687:1777)
        Ident ax/mul_assoc (1687:1699)
        Keyword : (1700:1701)
        Infix (1703:1777)
          Infix (1703:1711)
            Ident q (1703:1704)
            Keyword : (1705:1706)
            Ident Quad (1707:1711)
          Keyword -> (1713:1715)
          Infix (1717:1777)
            Infix (1717:1725)
              Ident r (1717:1718)
              Keyword : (1719:1720)
              Ident Quad (1721:1725)
            Keyword -> (1727:1729)
            Infix (1731:1777)
              Infix (1731:1739)
                Ident s (1731:1732)
                Keyword : (1733:1734)
                Ident Quad (1735:1739)
              Keyword -> (1741:1743)
              Infix (1744:1777)
                App (1744:1759)
                  Ident mul (1744:1747)
                  App (1749:1756)
                    Ident mul (1749:1752)
                    Ident q (1753:1754)
                    Ident r (1755:1756)
                  Ident s (1758:1759)
                Keyword = (1761:1762)
                App (1763:1777)
                  Ident mul (1763:1766)
                  Ident q (1767:1768)
                  App (1770:1777)
                    Ident mul (1770:1773)
                    Ident r (1774:1775)
                    Ident s (1776:1777)

-- elaborated


-- messages

error[E0000]: Unexpected character '\'
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |             ^

error[E0000]: Unexpected character '\'
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |                        ^

error[E0000]: Unexpected character '\'
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |                                   ^

error[E0000]: Unexpected character '\'
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |                                              ^

error[E0000]: Unexpected character '\'
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |                                                         ^

error[E0000]: Unexpected character '\'
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |                                                                    ^

error[E0000]: Unexpected character '\'
34 |       (q0 (make_quad a b c d) = a) /\ 
34 |                                     ^

error[E0000]: Unexpected character '\'
35 |         (q1 (make_quad a b c d) = b) /\ 
35 |                                       ^

error[E0000]: Unexpected character '\'
36 |         (q2 (make_quad a b c d) = c) /\
36 |                                       ^

error[E0102]: Incompatible precedences
55 |   ax/act_mul : (q : Quad) -> (r : Quad) -> p : Point -> act (mul q r) p = act q (act r p)
55 |                                              ^

error[E0208]: unexpected notation for term in synthesizing position: Infix
33 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
33 |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
34 |       (q0 (make_quad a b c d) = a) /\ 
34 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
35 |         (q1 (make_quad a b c d) = b) /\ 
35 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
36 |         (q2 (make_quad a b c d) = c) /\
36 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
37 |         (q3 (make_quad a b c d) = d)
37 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
